add signatures to reports function
