# api/server.go
@@ -19,6 +19,8 @@ func NewServer(store *db.Store) *Server {
 	router.POST("/accounts", server.createAccount)
 	router.PUT("/accounts/:id", server.updateAccount)
 	router.GET("/accounts/:id", server.getAccountInfo)
+	router.POST("/transfers", server.createTransfer)
+	router.PUT("/transfers", server.fulfilTransfer)
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return server
